--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.1.0",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-event-source": "^1.1.0",
+    "react-native-get-location": "^2.2.1",
+    "react-native-sse": "^1.1.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
