--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@react-native-community/geolocation": "^2.1.0",
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-location": "~14.2.2",
     "expo-status-bar": "~1.3.0",
+    "expo-task-manager": "~10.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
