--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@react-native-community/geolocation": "^2.1.0",
+    "@react-navigation/drawer": "^6.4.2",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-location": "~14.2.2",
     "expo-status-bar": "~1.3.0",
     "expo-task-manager": "~10.2.1",
+    "native-base": "^3.4.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-elements": "^3.4.2",
     "react-native-event-source": "^1.1.0",
     "react-native-get-location": "^2.2.1",
     "react-native-sse": "^1.1.0",
